[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Manuel Müller <triantium@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  tempfile = "3"
  error-chain = "0.12.4"
  tokio = { version = "1.14.0", features = ["full"] }
  reqwest = "0.11.7"
  atoi = "0.4.0"